Complete first cut at collective rules

--- a/rules-collective.cfg
+++ b/rules-collective.cfg
@@ -3,7 +3,85 @@
 create repository borg.localrole
 end repository
 
+create repository collective.monkeypatcher
+end repository
+
+create repository plone.recipe.alltests
+end repository
+
+create repository plone.recipe.zeoserver
+end repository
+
+create repository plone.recipe.zope2install
+end repository
+
+create repository plone.recipe.zope2instance
+end repository
+
+create repository plone.recipe.zope2zeoserver
+end repository
+
+create repository Products.ATContentTypes
+end repository
+
+create repository Products.CMFDiffTool
+end repository
+
+create repository Products.CMFDynamicViewFTI
+end repository
+
+create repository Products.CMFEditions
+end repository
+
 create repository Products.CMFFormController
+end repository
+
+create repository Products.CMFPlacefulWorkflow
+end repository
+
+create repository Products.CMFQuickInstallerTool
+end repository
+
+create repository Products.CMFTestCase
+end repository
+
+create repository Products.contentmigration
+end repository
+
+create repository Products.GroupUserFolder
+end repository
+
+create repository Products.i18ntestcase
+end repository
+
+create repository Products.PasswordResetTool
+end repository
+
+create repository Products.PlacelessTranslationService
+end repository
+
+create repository Products.PloneLanguageTool
+end repository
+
+create repository Products.PlonePAS
+end repository
+
+create repository Products.PloneTestCase
+end repository
+
+create repository Products.SecureMailHost
+end repository
+
+create repository Products.statusmessages
+end repository
+
+create repository Products.TinyMCE
+end repository
+
+create repository txtfilter
+end repository
+
+create repository wicked
 end repository
 
 
@@ -23,48 +101,101 @@ match /borg/components/borg.localrole/tags/([^/]+)/
 end match
 
 
-match /CMFFormController/trunk/
-  repository Products.CMFFormController
+match /collective.monkeypatcher/trunk/
+  repository collective.monkeypatcher
   branch master
 end match
 
-match /CMFFormController/branches/([^/]+)/
-  repository Products.CMFFormController
+match /collective.monkeypatcher/branches/([^/]+)/
+  repository collective.monkeypatcher
   branch \1
 end match
 
-match /CMFFormController/tags/([^/]+)/
-  repository Products.CMFFormController
+match /collective.monkeypatcher/tags/([^/]+)/
+  repository collective.monkeypatcher
   branch refs/tags/\1
+end match
+
+
+match /buildout/plone.recipe.(alltests|zeoserver|zope2install|zope2instance|zope2zeoserver)/trunk/
+  repository plone.recipe.\1
+  branch master
+end match
+
+match /buildout/plone.recipe.(alltests|zeoserver|zope2install|zope2instance|zope2zeoserver)/branches/([^/]+)/
+  repository plone.recipe.\1
+  branch \2
+end match
+
+match /buildout/plone.recipe.(alltests|zeoserver|zope2install|zope2instance|zope2zeoserver)/tags/([^/]+)/
+  repository plone.recipe.\1
+  branch refs/tags/\2
+end match
+
+
+match /(CMFFormController|CMFDynamicViewFTI|CMFQuickInstallerTool|PlacelessTranslationService|PloneLanguageTool|SecureMailHost|statusmessages)/trunk/
+  repository Products.\1
+  branch master
+end match
+
+match /(CMFFormController|CMFDynamicViewFTI|CMFQuickInstallerTool|PlacelessTranslationService|PloneLanguageTool|SecureMailHost|statusmessages)/branches/([^/]+)/
+  repository Products.\1
+  branch \2
+end match
+
+match /(CMFFormController|CMFDynamicViewFTI|CMFQuickInstallerTool|PlacelessTranslationService|PloneLanguageTool|SecureMailHost|statusmessages)/tags/([^/]+)/
+  repository Products.\1
+  branch refs/tags/\2
+end match
+
+
+match /(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/trunk/
+  repository Products.\1
+  branch master
+end match
+
+match /Products.(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/trunk/
+  repository Products.\1
+  branch master
+end match
+
+match /(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/branches/([^/]+)/
+  repository Products.\1
+  branch \2
+end match
+
+match /Products.(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/branches/([^/]+)/
+  repository Products.\1
+  branch \2
+end match
+
+match /(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/tags/([^/]+)/
+  repository Products.\1
+  branch \2
+end match
+
+match /Products.(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/tags/([^/]+)/
+  repository Products.\1
+  branch refs/tags/\2
+end match
+
+
+match /(txtfilter|wicked)/trunk/
+  repository \1
+  branch master
+end match
+
+match /(txtfilter|wicked)/branches/([^/]+)/
+  repository \1
+  branch \2
+end match
+
+match /(txtfilter|wicked)/tags/([^/]+)/
+  repository \1
+  branch refs/tags/\2
 end match
 
 
 # ignore everything else
 match /
 end match
-
-# TODO
-# collective.monkeypatcher = http://svn.plone.org/svn/collective/collective.monkeypatcher
-# plone.recipe.alltests = http://svn.plone.org/svn/collective/buildout/plone.recipe.alltests
-# plone.recipe.zeoserver = http://svn.plone.org/svn/collective/buildout/plone.recipe.zeoserver
-# plone.recipe.zope2instance = http://svn.plone.org/svn/collective/buildout/plone.recipe.zope2instance
-# Products.ATContentTypes = http://svn.plone.org/svn/collective/Products.ATContentTypes
-# Products.CMFDiffTool = http://svn.plone.org/svn/collective/Products.CMFDiffTool
-# Products.CMFDynamicViewFTI = http://svn.plone.org/svn/collective/CMFDynamicViewFTI
-# Products.CMFEditions = http://svn.plone.org/svn/collective/Products.CMFEditions
-# Products.CMFPlacefulWorkflow = http://svn.plone.org/svn/collective/Products.CMFPlacefulWorkflow
-# Products.CMFQuickInstallerTool = http://svn.plone.org/svn/collective/CMFQuickInstallerTool
-# Products.CMFTestCase = http://svn.plone.org/svn/collective/Products.CMFTestCase
-# Products.contentmigration = http://svn.plone.org/svn/collective/Products.contentmigration
-# Products.GroupUserFolder = http://svn.plone.org/svn/collective/Products.GroupUserFolder
-# Products.i18ntestcase = http://svn.plone.org/svn/collective/Products.i18ntestcase
-# Products.PasswordResetTool = http://svn.plone.org/svn/collective/Products.PasswordResetTool
-# Products.PlacelessTranslationService = http://svn.plone.org/svn/collective/PlacelessTranslationService
-# Products.PloneLanguageTool = http://svn.plone.org/svn/collective/PloneLanguageTool
-# Products.PlonePAS = http://svn.plone.org/svn/collective/Products.PlonePAS
-# Products.PloneTestCase = http://svn.plone.org/svn/collective/Products.PloneTestCase
-# Products.SecureMailHost = http://svn.plone.org/svn/collective/SecureMailHost
-# Products.statusmessages = http://svn.plone.org/svn/collective/statusmessages
-# Products.TinyMCE = http://svn.plone.org/svn/collective/Products.TinyMCE
-# txtfilter = http://svn.plone.org/svn/collective/txtfilter
-# wicked = http://svn.plone.org/svn/collective/wicked
