--- a/rules-collective.cfg
+++ b/rules-collective.cfg
@@ -85,6 +85,250 @@ create repository wicked
 end repository
 
 
+match /trunk/
+  repository Products.ATContentTypes
+  branch master
+  min revision 17
+  max revision 692
+end match
+
+match /trunk/
+  repository Products.CMFFormController
+  branch master
+  min revision 1211
+  max revision 1320
+end match
+
+match /trunk/
+  repository Products.CMFTestCase
+  branch master
+  min revision 2020
+  max revision 2078
+end match
+
+match /trunk/
+  repository Products.CMFQuickInstallerTool
+  branch master
+  min revision 2082
+  max revision 2205
+end match
+
+match /trunk/
+  repository Products.GroupUserFolder
+  branch master
+  min revision 2995
+  max revision 3406
+end match
+
+match /trunk/
+  repository Products.PlacelessTranslationService
+  branch master
+  min revision 3810
+  max revision 3988
+end match
+
+match /trunk/
+  repository Products.PloneLanguageTool
+  branch master
+  min revision 6352
+  max revision 6513
+end match
+
+match /trunk/
+  repository Products.PloneTestCase
+  branch master
+  min revision 6955
+  max revision 7011
+end match
+
+match /trunk/
+  repository Products.SecureMailHost
+  branch master
+  min revision 7144
+  max revision 7196
+end match
+
+match /trunk/
+  repository Products.PlonePAS
+  branch master
+  min revision 9527
+  max revision 9767
+end match
+
+match /trunk/
+  repository Products.PasswordResetTool
+  branch master
+  min revision 9771
+  max revision 9801
+end match
+
+
+match /tags/([^/]+)/
+  repository Products.ATContentTypes
+  branch refs/tags/\1
+  min revision 17
+  max revision 693
+end match
+
+match /tags/([^/]+)/
+  repository Products.CMFFormController
+  branch refs/tags/\1
+  min revision 1211
+  max revision 1321
+end match
+
+match /tags/([^/]+)/
+  repository Products.CMFTestCase
+  branch refs/tags/\1
+  min revision 2020
+  max revision 2079
+end match
+
+match /tags/([^/]+)/
+  repository Products.CMFQuickInstallerTool
+  branch refs/tags/\1
+  min revision 2082
+  max revision 2206
+end match
+
+match /tags/([^/]+)/
+  repository Products.GroupUserFolder
+  branch refs/tags/\1
+  min revision 2995
+  max revision 3407
+end match
+
+match /tags/([^/]+)/
+  repository Products.PlacelessTranslationService
+  branch refs/tags/\1
+  min revision 3810
+  max revision 3989
+end match
+
+match /tags/([^/]+)/
+  repository Products.PloneLanguageTool
+  branch refs/tags/\1
+  min revision 6352
+  max revision 6514
+end match
+
+match /tags/([^/]+)/
+  repository Products.PloneTestCase
+  branch refs/tags/\1
+  min revision 6955
+  max revision 7012
+end match
+
+match /tags/([^/]+)/
+  repository Products.SecureMailHost
+  branch refs/tags/\1
+  min revision 7144
+  max revision 7197
+end match
+
+match /tags/([^/]+)/
+  repository Products.PlonePAS
+  branch refs/tags/\1
+  min revision 9527
+  max revision 9768
+end match
+
+match /tags/([^/]+)/
+  repository Products.PasswordResetTool
+  branch refs/tags/\1
+  min revision 9771
+  max revision 9802
+end match
+
+
+match /branches/([^/]+)/
+  repository Products.ATContentTypes
+  branch \1
+  min revision 17
+  max revision 694
+end match
+
+match /branches/([^/]+)/
+  repository Products.CMFFormController
+  branch \1
+  min revision 1211
+  max revision 1322
+end match
+
+match /branches/([^/]+)/
+  repository Products.CMFTestCase
+  branch \1
+  min revision 2020
+  max revision 2080
+end match
+
+match /branches/([^/]+)/
+  repository Products.CMFQuickInstallerTool
+  branch \1
+  min revision 2082
+  max revision 2207
+end match
+
+match /branches/([^/]+)/
+  repository Products.GroupUserFolder
+  branch \1
+  min revision 2995
+  max revision 3408
+end match
+
+match /branches/([^/]+)/
+  repository Products.PlacelessTranslationService
+  branch \1
+  min revision 3810
+  max revision 3990
+end match
+
+match /branches/([^/]+)/
+  repository Products.PloneLanguageTool
+  branch \1
+  min revision 6352
+  max revision 6515
+end match
+
+match /branches/([^/]+)/
+  repository Products.PloneTestCase
+  branch \1
+  min revision 6955
+  max revision 7013
+end match
+
+match /branches/([^/]+)/
+  repository Products.SecureMailHost
+  branch \1
+  min revision 7144
+  max revision 7198
+end match
+
+match /branches/([^/]+)/
+  repository Products.PlonePAS
+  branch \1
+  min revision 9527
+  max revision 9769
+end match
+
+match /branches/([^/]+)/
+  repository Products.PasswordResetTool
+  branch \1
+  min revision 9771
+  max revision 9803
+end match
+
+
+match /CMFTestCase/trunk/trunk/
+end match
+
+match /CMFTestCase/tags/tags/
+end match
+
+match /CMFTestCase/branches/branches/
+end match
+
+
 match /borg/components/borg.localrole/trunk/
   repository Products.CMFFormController
   branch master
@@ -117,6 +361,18 @@ match /collective.monkeypatcher/tags/([^/]+)/
 end match
 
 
+match /buildout/plone.recipe.zope2install/
+  repository plone.recipe.zope2install
+  branch master
+  max revision 38387
+end match
+
+match /buildout/plone.recipe.zope2instance/
+  repository plone.recipe.zope2instance
+  branch master
+  max revision 38388
+end match
+
 match /buildout/plone.recipe.(alltests|zeoserver|zope2install|zope2instance|zope2zeoserver)/trunk/
   repository plone.recipe.\1
   branch master
@@ -133,7 +389,7 @@ match /buildout/plone.recipe.(alltests|zeoserver|zope2install|zope2instance|zope
 end match
 
 
-match /(CMFFormController|CMFDynamicViewFTI|CMFQuickInstallerTool|PlacelessTranslationService|PloneLanguageTool|SecureMailHost|statusmessages)/trunk/
+match /(CMFFormController|CMFDynamicViewFTI|CMFQuickInstallerTool|PlacelessTranslationService|PloneLanguageTool|SecureMailHost|statusmessages)/(trunk|trunk-old)/
   repository Products.\1
   branch master
 end match
@@ -149,7 +405,17 @@ match /(CMFFormController|CMFDynamicViewFTI|CMFQuickInstallerTool|PlacelessTrans
 end match
 
 
-match /(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/trunk/
+match /CMFDiffTool/2.5-zope29/
+  repository Products.CMFDiffTool
+  branch 2.5-zope29
+end match
+
+match /Products.i18ntestcase/i18ntestcase/
+  repository Products.i18ntestcase
+  branch master
+end match
+
+match /(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/(trunk|trunk-old)/
   repository Products.\1
   branch master
 end match
@@ -180,14 +446,37 @@ match /Products.(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFT
 end match
 
 
+match /filter/trunk/
+  repository txtfilter
+  branch master
+end match
+
+match /wicked/lib/wicked/trunk/
+  repository wicked
+  branch master
+end match
+
+match /wicked/lib/wicked/bbb/
+end match
+
 match /(txtfilter|wicked)/trunk/
   repository \1
   branch master
 end match
 
+match /filter/branches/([^/]+)/
+  repository txtfilter
+  branch \1
+end match
+
 match /(txtfilter|wicked)/branches/([^/]+)/
   repository \1
   branch \2
+end match
+
+match /filter/tags/([^/]+)/
+  repository txtfilter
+  branch refs/tags/\1
 end match
 
 match /(txtfilter|wicked)/tags/([^/]+)/
