Ignore early i18ntestcase renaming

--- a/rules-collective.cfg
+++ b/rules-collective.cfg
@@ -415,6 +415,11 @@ match /Products.i18ntestcase/i18ntestcase/
   branch master
 end match
 
+match /Products.i18ntestcase/Products/
+  repository Products.i18ntestcase
+  branch master
+end match
+
 match /(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|PloneTestCase|TinyMCE)/(trunk|trunk-old)/
   repository Products.\1
   branch master
