Add new collection/search repos

--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -21,6 +21,9 @@ end repository
 create repository plone.app.caching
 end repository
 
+create repository plone.app.collection
+end repository
+
 create repository plone.app.content
 end repository
 
@@ -76,6 +79,9 @@ create repository plone.app.redirector
 end repository
 
 create repository plone.app.registry
+end repository
+
+create repository plone.app.search
 end repository
 
 create repository plone.app.testing
@@ -287,17 +293,17 @@ match /plone.app.kss/trunx/
   branch master
 end match
 
-match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/trunk/
+match /plone.app.(blob|caching|collection|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|search|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/trunk/
   repository plone.app.\1
   branch master
 end match
 
-match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/branches/([^/]+)/
+match /plone.app.(blob|caching|collection|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|search|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/branches/([^/]+)/
   repository plone.app.\1
   branch \2
 end match
 
-match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/tags/([^/]+)/
+match /plone.app.(blob|caching|collection|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|search|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/tags/([^/]+)/
   repository plone.app.\1
   branch refs/tags/\2
 end match
