Add project urls for collection/search - disable archetypes.kss workaround

--- a/projects.cfg
+++ b/projects.cfg
@@ -43,6 +43,7 @@ wicked = http://svn.plone.org/svn/collective/wicked
 Plone = http://svn.plone.org/svn/plone/Plone
 plone.app.blob = http://svn.plone.org/svn/plone/plone.app.blob
 plone.app.caching = http://svn.plone.org/svn/plone/plone.app.caching
+plone.app.collection = http://svn.plone.org/svn/plone/plone.app.collection
 plone.app.content = http://svn.plone.org/svn/plone/plone.app.content
 plone.app.contentmenu = http://svn.plone.org/svn/plone/plone.app.contentmenu
 plone.app.contentrules = http://svn.plone.org/svn/plone/plone.app.contentrules
@@ -62,6 +63,7 @@ plone.app.openid = http://svn.plone.org/svn/plone/plone.app.openid
 plone.app.portlets = http://svn.plone.org/svn/plone/plone.app.portlets
 plone.app.redirector = http://svn.plone.org/svn/plone/plone.app.redirector
 plone.app.registry = http://svn.plone.org/svn/plone/plone.app.registry
+plone.app.search = http://svn.plone.org/svn/plone/plone.app.search
 plone.app.testing = http://svn.plone.org/svn/plone/plone.app.testing
 plone.app.upgrade = http://svn.plone.org/svn/plone/plone.app.upgrade
 plone.app.users = http://svn.plone.org/svn/plone/plone.app.users
