--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -35,10 +35,10 @@ end match
 
 # ignore branch that copied the root instead of the trunk and was deleted
 # immediately afterwards
-match /archetypes.kss/branches/plip10778-plone.uuid/
-  min revision 13353
-  max revision 13355
-end match
+# match /archetypes.kss/branches/plip10778-plone.uuid/
+#   min revision 13353
+#   max revision 13355
+# end match
 
 match /(archetypes.kss|archetypes.schemaextender)/branches/([^/]+)/
   repository \1
