Fix wrong repo for borg.localrole/trunk

--- a/rules-collective.cfg
+++ b/rules-collective.cfg
@@ -330,7 +330,7 @@ end match
 
 
 match /borg/components/borg.localrole/trunk/
-  repository Products.CMFFormController
+  repository borg.localrole
   branch master
 end match
 
