Ignore early trunx misname

--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -28,7 +28,7 @@ create repository Products.validation
 end repository
 
 
-match /(archetypes.kss|archetypes.schemaextender)/(trunk|trunx)/
+match /(archetypes.kss|archetypes.schemaextender)/trunk/
   repository \1
   branch master
 end match
