--- a/rules-collective.cfg
+++ b/rules-collective.cfg
@@ -421,17 +421,17 @@ match /Products.i18ntestcase/Products/
 end match
 
 # ignore 63201 and 63204 for PloneTestCase, which moved trunk back and forth
-match /PloneTestCase/trunk/
-  repository Products.PloneTestCase
-  branch master
-  max revision 63200
-end match
+#match /PloneTestCase/trunk/
+#  repository Products.PloneTestCase
+#  branch master
+#  max revision 63200
+#end match
 
-match /PloneTestCase/trunk/
-  repository Products.PloneTestCase
-  branch master
-  min revision 63205
-end match
+#match /PloneTestCase/trunk/
+#  repository Products.PloneTestCase
+#  branch master
+#  min revision 63205
+#end match
 
 match /(ATContentTypes|CMFDiffTool|CMFEditions|CMFPlacefulWorkflow|CMFTestCase|contentmigration|GroupUserFolder|i18ntestcase|PasswordResetTool|PlonePAS|TinyMCE)/(trunk|trunk-old)/
   repository Products.\1
