--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,12 +7,12 @@ parts =
 versions = versions
 allow-picked-versions = false
 
-
 [py]
 recipe = zc.recipe.egg
-eggs = argparse
 interpreter = py
-
+eggs =
+    argh
+    requests
 
 [svn2git]
 recipe = plone.recipe.command
@@ -23,10 +23,10 @@ command =
     make
     cd ..
 
-
 [versions]
-argparse = 1.2.1
 distribute = 0.6.15
 plone.recipe.command = 1.1
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
+argh = 0.14.0
+requests = 0.6.1
