--- a/rules-Products.Marshall.cfg
+++ b/rules-Products.Marshall.cfg
@@ -1,23 +1,43 @@
 create repository Products.Marshall
 end repository
 
-match /(Marshall|Products.Marshall)/trunk/
+match /Marshall/trunk/
+  repository Products.Marshall
+  branch master
+  prefix Products/Marshall/
+end match
+
+match /Products.Marshall/trunk/
   repository Products.Marshall
   branch master
 end match
 
+match /Marshall/branches/([^/]+)/
+  repository Products.Marshall
+  branch \1
+  prefix Products/Marshall/
+end match
+
+match /Products.Marshall/branches/([^/]+)/
+  repository Products.Marshall
+  branch \1
+end match
+
+match /Marshall/tags/([^/]+)/
+  repository Products.Marshall
+  branch refs/tags/\1
+  prefix Products/Marshall/
+end match
+
+match /Products.Marshall/tags/([^/]+)/
+  repository Products.Marshall
+  branch refs/tags/\1
+end match
+
+# ignore historical branches
 match /Marshall/branches/historical/([^/]+)/
 end match
 
-match /(Marshall|Products.Marshall)/branches/([^/]+)/
-  repository Products.Marshall
-  branch \2
-end match
-
-match /(Marshall|Products.Marshall)/tags/([^/]+)/
-  repository Products.Marshall
-  branch refs/tags/\2
-end match
 # ignore everything else
 match /
 end match
