svn2git tool installed into src directory

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,11 +17,13 @@ eggs =
 [svn2git]
 recipe = plone.recipe.command
 command =
+    mkdir src
+    cd src
     [ ! -e svn2git ] && git clone git://gitorious.org/svn2git/svn2git.git
     cd svn2git
     qmake
     make
-    cd ..
+    cd ../..
 
 [versions]
 distribute = 0.6.15
