updated .gitignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-.*
-authors.txt
-authors-*
+*.py?
+*.sw?
+
+.installed.cfg
+authors.cfg
 bin/
+build/
 eggs/
-git-svn-abandon/
-svn2git/
-parts/
-repos/
 include/
 lib/
-authors.cfg
-github-repos.log
 local
+parts/
 share/
+src/svn2git/
+var/
