--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,28 +1,24 @@
 [buildout]
-
+develop = src/svn-migrate
 parts =
   py
   svn2git
-
 versions = versions
 allow-picked-versions = false
 
 [py]
 recipe = zc.recipe.egg
 interpreter = py
-eggs =
-    argh
-    requests
+eggs = svn-migrate
 
 [svn2git]
 recipe = plone.recipe.command
 command =
-    mkdir src
     cd src
     [ ! -e svn2git ] && git clone git://gitorious.org/svn2git/svn2git.git
     cd svn2git
-    qmake
-    make
+#    qmake
+#    make
     cd ../..
 
 [versions]
