missing make and qmake

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,8 +17,8 @@ command =
     cd src
     [ ! -e svn2git ] && git clone git://gitorious.org/svn2git/svn2git.git
     cd svn2git
-#    qmake
-#    make
+    qmake
+    make
     cd ../..
 
 [versions]
