adding status report

--- a/etc/projects.cfg
+++ b/etc/projects.cfg
@@ -6,9 +6,9 @@ svn-repos =
     plone http://svn.plone.org/svn/plone
 
 svn-all-fast-export-tool = %(here)s/../src/svn2git/svn-all-fast-export
-mirror-location = %(here)s/../var/repos/svn-mirror
-exported-location = %(here)s/../var/repos/git-exported
-cleaned-location = %(here)s/../var/repos/git-cleaned
+svn-mirror-location = %(here)s/../var/repos/svn-mirror
+svn-export-location = %(here)s/../var/repos/svn-export
+git-cleaned-location = %(here)s/../var/repos/git-cleaned
 version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*$
 
 #
