--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,7 +8,6 @@ allow-picked-versions = false
 
 [py]
 recipe = zc.recipe.egg
-interpreter = py
 eggs = svn-migrate
 
 [svn2git]
@@ -27,4 +26,6 @@ plone.recipe.command = 1.1
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
 argh = 0.14.0
-requests = 0.6.1
+github2 = 0.5.1
+python-dateutil = 1.5
+httplib2 = 0.7.1
