script in working state ... i'm not saying its bugless, but its working

--- a/etc/projects.cfg
+++ b/etc/projects.cfg
@@ -9,6 +9,7 @@ svn-all-fast-export-tool = %(here)s/../src/svn2git/svn-all-fast-export
 svn-mirror-location = %(here)s/../var/repos/svn-mirror
 svn-export-location = %(here)s/../var/repos/svn-export
 git-cleaned-location = %(here)s/../var/repos/git-cleaned
+analyze-location = %(here)s/../var/repos/analyze
 version_regex = ^(plone|v)?[\d._-]+(alpha|beta|branch|rc|RC|final|a|b|c|x)?(\d)*$
 
 #
