--- a/etc/rules/rules-Products.Marshall.cfg
+++ b/etc/rules/rules-Products.Marshall.cfg
@@ -1,15 +1,25 @@
 create repository Products.Marshall
 end repository
 
+# ignore historical branches
+match /Marshall/branches/historical/([^/]+)/
+end match
+
+# ignore commit deleting trunk
 match /Marshall/trunk/
-  repository Products.Marshall
-  branch master
-  prefix Products/Marshall/
+  min revision 9179
+  max revision 9179
 end match
 
 match /Products.Marshall/trunk/
   repository Products.Marshall
   branch master
+end match
+
+match /Marshall/trunk/
+  repository Products.Marshall
+  branch master
+  prefix Products/Marshall/
 end match
 
 match /Marshall/branches/([^/]+)/
@@ -32,10 +42,6 @@ end match
 match /Products.Marshall/tags/([^/]+)/
   repository Products.Marshall
   branch refs/tags/\1
-end match
-
-# ignore historical branches
-match /Marshall/branches/historical/([^/]+)/
 end match
 
 # ignore everything else
