--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -1,13 +1,13 @@
 # rules for the archetypes repository
 
-create repository archetypes.kss
-end repository
+#create repository archetypes.kss
+#end repository
 
-create repository archetypes.referencebrowserwidget
-end repository
+#create repository archetypes.referencebrowserwidget
+#end repository
 
-create repository archetypes.schemaextender
-end repository
+#create repository archetypes.schemaextender
+#end repository
 
 create repository Products.Archetypes
 end repository
@@ -28,10 +28,10 @@ create repository Products.validation
 end repository
 
 
-match /(archetypes.kss|archetypes.schemaextender)/trunk/
-  repository \1
-  branch master
-end match
+#match /(archetypes.kss|archetypes.schemaextender)/trunk/
+#  repository \1
+#  branch master
+#end match
 
 # ignore branch that copied the root instead of the trunk and was deleted
 # immediately afterwards
@@ -40,31 +40,31 @@ end match
 #   max revision 13355
 # end match
 
-match /(archetypes.kss|archetypes.schemaextender)/branches/([^/]+)/
-  repository \1
-  branch \2
-end match
+#match /(archetypes.kss|archetypes.schemaextender)/branches/([^/]+)/
+#  repository \1
+#  branch \2
+#end match
 
-match /(archetypes.kss|archetypes.schemaextender)/tags/([^/]+)/
-  repository \1
-  branch refs/tags/\2
-end match
+#match /(archetypes.kss|archetypes.schemaextender)/tags/([^/]+)/
+#  repository \1
+#  branch refs/tags/\2
+#end match
 
 
-match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/trunk/
-  repository archetypes.referencebrowserwidget
-  branch master
-end match
+#match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/trunk/
+#  repository archetypes.referencebrowserwidget
+#  branch master
+#end match
 
-match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/branches/([^/]+)/
-  repository archetypes.referencebrowserwidget
-  branch \1
-end match
+#match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/branches/([^/]+)/
+#  repository archetypes.referencebrowserwidget
+#  branch \1
+#end match
 
-match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/tags/([^/]+)/
-  repository archetypes.referencebrowserwidget
-  branch refs/tags/\1
-end match
+#match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/tags/([^/]+)/
+#  repository archetypes.referencebrowserwidget
+#  branch refs/tags/\1
+#end match
 
 
 match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/(trunk|trunk-old)/
