--- a/etc/rules/rules-archetypes.kss.cfg
+++ b/etc/rules/rules-archetypes.kss.cfg
@@ -1,17 +1,17 @@
 create repository archetypes.kss
 end repository
 
-match /archetypes.kss/trunk/([^/]+)/
+match /archetypes.kss/trunk/
   repository archetypes.kss
   branch master
 end match
 
 # ignore branch that copied the root instead of the trunk and was deleted
 # immediately afterwards
-# match /archetypes.kss/branches/plip10778-plone.uuid/
-#   min revision 13353
-#   max revision 13355
-# end match
+match /archetypes.kss/branches/plip10778-plone.uuid/
+   min revision 13353
+   max revision 13355
+end match
 
 match /archetypes.kss/branches/([^/]+)/
   repository archetypes.kss
