making status command work again, updated status of work i did

--- a/etc/projects.cfg
+++ b/etc/projects.cfg
@@ -21,63 +21,67 @@ rules = %(here)s/rules/rules-archetypes.kss.cfg
 svn-repo = archetypes
 svn-path = /archetypes.kss
 git-url = git@github.com:plone/archetypes.kss.git
-status = NEEDS RULES
+status = WORKS-FOR-ME (garbas)
+    tag 1.2 and branch 1.2 are missing some content and show same things are missing
 
 [repo:archetypes.referencebrowserwidget]
 rules = %(here)s/rules/rules-archetypes.referencebrowserwidget.cfg
 svn-repo = archetypes
 svn-path = /MoreFieldsAndWidgets/archetypes.referencebrowserwidget
 git-url = git@github.com:plone/archetypes.referencebrowserwidget.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:archetypes.schemaextender]
 rules = %(here)s/rules/rules-archetypes.schemaextender.cfg
 svn-repo = archetypes
 svn-path = /archetypes.schemaextender
 git-url = git@github.com:plone/archetypes.schemaextender.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.Archetypes]
 rules = %(here)s/rules/rules-Products.Archetypes.cfg
 svn-repo = archetypes
 svn-path = /Products.Archetypes
 git-url = git@github.com:plone/Products.Archetypes.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.ATReferenceBrowserWidget]
 rules = %(here)s/rules/rules-Products.ATReferenceBrowserWidget.cfg
 svn-repo = archetypes
 svn-path = /MoreFieldsAndWidgets/ATReferenceBrowserWidget
 git-url = git@github.com:plone/Products.ATReferenceBrowserWidget.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.Marshall]
 rules = %(here)s/rules/rules-Products.Marshall.cfg
 svn-repo = archetypes
 svn-path = /Products.Marshall
 git-url = git@github.com:plone/Products.Marshall.git
-status = NEEDS RULES
+status = IN-PROGRESS (garbas)
+    2.0 barnch and tag are showing minor differenced which can be ignored
+    additional branch 0.6 shows up in git repo from svn histroy (we might want to delete this)
+    there are many tags from the past that are now shown in git repository
 
 [repo:Products.MimetypesRegistry]
 rules = %(here)s/rules/rules-Products.MimetypesRegistry.cfg
 svn-repo = archetypes
 svn-path = /Products.MimetypesRegistry
 git-url = git@github.com:plone/Products.MimetypesRegistry.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.PortalTransforms]
 rules = %(here)s/rules/rules-Products.PortalTransforms.cfg
 svn-repo = archetypes
 svn-path = /Products.PortalTransforms
 git-url = git@github.com:plone/Products.PortalTransforms.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.validation]
 rules = %(here)s/rules/rules-Products.validation.cfg
 svn-repo = archetypes
 svn-path = /Products.validation
 git-url = git@github.com:plone/Products.validation.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 
 #
