--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -9,23 +9,23 @@
 #create repository archetypes.schemaextender
 #end repository
 
-create repository Products.Archetypes
-end repository
+#create repository Products.Archetypes
+#end repository
 
-create repository Products.ATReferenceBrowserWidget
-end repository
+#create repository Products.ATReferenceBrowserWidget
+#end repository
 
-create repository Products.Marshall
-end repository
+#create repository Products.Marshall
+#end repository
 
-create repository Products.MimetypesRegistry
-end repository
+#create repository Products.MimetypesRegistry
+#end repository
 
-create repository Products.PortalTransforms
-end repository
+#create repository Products.PortalTransforms
+#end repository
 
-create repository Products.validation
-end repository
+#create repository Products.validation
+#end repository
 
 
 #match /(archetypes.kss|archetypes.schemaextender)/trunk/
@@ -67,132 +67,132 @@ end repository
 #end match
 
 
-match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/(trunk|trunk-old)/
-  repository Products.ATReferenceBrowserWidget
-  branch master
-end match
-
-match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/branches/([^/]+)/
-  repository Products.ATReferenceBrowserWidget
-  branch \1
-end match
-
-match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/tags/([^/]+)/
-  repository Products.ATReferenceBrowserWidget
-  branch refs/tags/\1
-end match
-
-
-match /(generator|Archetypes|Products.Archetypes)/trunk/
-  repository Products.Archetypes
-  branch master
-end match
-
-match /(generator|Archetypes)/branches/historical/([^/]+)/
-end match
-
-match /(generator|Archetypes|Products.Archetypes)/branches/([^/]+)/
-  repository Products.Archetypes
-  branch \2
-end match
-
-match /Archetypes/tags/(last_known_working|tag_05062003|v1_0_aprilfools)/
-end match
-
-match /(generator|Archetypes|Products.Archetypes)/tags/([^/]+)/
-  repository Products.Archetypes
-  branch refs/tags/\2
-end match
+#match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/(trunk|trunk-old)/
+#  repository Products.ATReferenceBrowserWidget
+#  branch master
+#end match
+#
+#match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/branches/([^/]+)/
+#  repository Products.ATReferenceBrowserWidget
+#  branch \1
+#end match
+#
+#match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/tags/([^/]+)/
+#  repository Products.ATReferenceBrowserWidget
+#  branch refs/tags/\1
+#end match
 
 
-match /(Marshall|Products.Marshall)/trunk/
-  repository Products.Marshall
-  branch master
-end match
+#match /(generator|Archetypes|Products.Archetypes)/trunk/
+#  repository Products.Archetypes
+#  branch master
+#end match
 
-match /Marshall/branches/historical/([^/]+)/
-end match
+#match /(generator|Archetypes)/branches/historical/([^/]+)/
+#end match
 
-match /(Marshall|Products.Marshall)/branches/([^/]+)/
-  repository Products.Marshall
-  branch \2
-end match
+#match /(generator|Archetypes|Products.Archetypes)/branches/([^/]+)/
+#  repository Products.Archetypes
+#  branch \2
+#end match
 
-match /(Marshall|Products.Marshall)/tags/([^/]+)/
-  repository Products.Marshall
-  branch refs/tags/\2
-end match
+#match /Archetypes/tags/(last_known_working|tag_05062003|v1_0_aprilfools)/
+#end match
 
-
-match /(MimetypesRegistry|Products.MimetypesRegistry)/trunk/
-  repository Products.MimetypesRegistry
-  branch master
-end match
-
-match /MimetypesRegistry/branches/historical/([^/]+)/
-end match
-
-match /(MimetypesRegistry|Products.MimetypesRegistry)/branches/([^/]+)/
-  repository Products.MimetypesRegistry
-  branch \2
-end match
-
-match /(MimetypesRegistry|Products.MimetypesRegistry)/tags/([^/]+)/
-  repository Products.MimetypesRegistry
-  branch refs/tags/\2
-end match
+#match /(generator|Archetypes|Products.Archetypes)/tags/([^/]+)/
+#  repository Products.Archetypes
+#  branch refs/tags/\2
+#end match
 
 
-match /(PortalTransforms|Products.PortalTransforms)/trunk/
-  repository Products.PortalTransforms
-  branch master
-end match
-
-match /PortalTransforms/branches/historical/([^/]+)/
-end match
-
-match /(PortalTransforms|Products.PortalTransforms)/branches/([^/]+)/
-  repository Products.PortalTransforms
-  branch \2
-end match
-
-match /PortalTransforms/jfroche-phototransforms-branch/
-  repository Products.PortalTransforms
-  branch jfroche-phototransforms-branch
-end match
-
-match /(PortalTransforms|Products.PortalTransforms)/tags/([^/]+)/
-  repository Products.PortalTransforms
-  branch refs/tags/\2
-end match
+#match /(Marshall|Products.Marshall)/trunk/
+#  repository Products.Marshall
+#  branch master
+#end match
+#
+#match /Marshall/branches/historical/([^/]+)/
+#end match
+#
+#match /(Marshall|Products.Marshall)/branches/([^/]+)/
+#  repository Products.Marshall
+#  branch \2
+#end match
+#
+#match /(Marshall|Products.Marshall)/tags/([^/]+)/
+#  repository Products.Marshall
+#  branch refs/tags/\2
+#end match
 
 
-match /(validation|Products.validation)/trunk/
-  repository Products.validation
-  branch master
-end match
+#match /(MimetypesRegistry|Products.MimetypesRegistry)/trunk/
+#  repository Products.MimetypesRegistry
+#  branch master
+#end match
+#
+#match /MimetypesRegistry/branches/historical/([^/]+)/
+#end match
+#
+#match /(MimetypesRegistry|Products.MimetypesRegistry)/branches/([^/]+)/
+#  repository Products.MimetypesRegistry
+#  branch \2
+#end match
+#
+#match /(MimetypesRegistry|Products.MimetypesRegistry)/tags/([^/]+)/
+#  repository Products.MimetypesRegistry
+#  branch refs/tags/\2
+#end match
 
-# ignore branch that copied the root instead of the trunk and was deleted
-# immediately afterwards
-match /validation/branches/gotcha-validation-i18n/
-  min revision 3860
-  max revision 3862
-end match
 
-match /validation/branches/historical/([^/]+)/
-end match
+#match /(PortalTransforms|Products.PortalTransforms)/trunk/
+#  repository Products.PortalTransforms
+#  branch master
+#end match
+#
+#match /PortalTransforms/branches/historical/([^/]+)/
+#end match
+#
+#match /(PortalTransforms|Products.PortalTransforms)/branches/([^/]+)/
+#  repository Products.PortalTransforms
+#  branch \2
+#end match
+#
+#match /PortalTransforms/jfroche-phototransforms-branch/
+#  repository Products.PortalTransforms
+#  branch jfroche-phototransforms-branch
+#end match
+#
+#match /(PortalTransforms|Products.PortalTransforms)/tags/([^/]+)/
+#  repository Products.PortalTransforms
+#  branch refs/tags/\2
+#end match
 
-match /(validation|Products.validation)/branches/([^/]+)/
-  repository Products.validation
-  branch \2
-end match
 
-match /(validation|Products.validation)/tags/([^/]+)/
-  repository Products.validation
-  branch refs/tags/\2
-end match
+#match /(validation|Products.validation)/trunk/
+#  repository Products.validation
+#  branch master
+#end match
+#
+## ignore branch that copied the root instead of the trunk and was deleted
+## immediately afterwards
+#match /validation/branches/gotcha-validation-i18n/
+#  min revision 3860
+#  max revision 3862
+#end match
+#
+#match /validation/branches/historical/([^/]+)/
+#end match
+#
+#match /(validation|Products.validation)/branches/([^/]+)/
+#  repository Products.validation
+#  branch \2
+#end match
+#
+#match /(validation|Products.validation)/tags/([^/]+)/
+#  repository Products.validation
+#  branch refs/tags/\2
+#end match
 
 
 # ignore everything else
-match /
-end match
+#match /
+#end match
