adding rules files with standard layout for repositories, collective repos rules are copied from hannos rules files, coredev repo added

--- a/etc/projects.cfg
+++ b/etc/projects.cfg
@@ -93,201 +93,208 @@ rules = %(here)s/rules/rules-borg.localrole.cfg
 svn-repo = collective
 svn-path = /borg/components/borg.localrole
 git-url = git@github.com:plone/borg.localrole.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:collective.monkeypatcher]
 rules = %(here)s/rules/rules-collective.monkeypatcher.cfg
 svn-repo = collective
 svn-path = /collective.monkeypatcher
 git-url = git@github.com:plone/collective.monkeypatcher.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.recipe.alltests]
 rules = %(here)s/rules/rules-plone.recipe.alltests.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.alltests
 git-url = git@github.com:plone/plone.recipe.alltests.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.recipe.zeoserver]
 rules = %(here)s/rules/rules-plone.recipe.zeoserver.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.zeoserver
 git-url = git@github.com:plone/plone.recipe.zeoserver.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.recipe.zope2instance]
 rules = %(here)s/rules/rules-plone.recipe.zope2instance.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.zope2instance
 git-url = git@github.com:plone/plone.recipe.zope2instance.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.recipe.zope2install]
 rules = %(here)s/rules/rules-plone.recipe.zope2install.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.zope2install
 git-url = git@github.com:plone/plone.recipe.zope2install.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:plone.recipe.zope2zeoserver]
 rules = %(here)s/rules/rules-plone.recipe.zope2zeoserver.cfg
 svn-repo = collective
 svn-path = /buildout/plone.recipe.zope2zeoserver
 git-url = git@github.com:plone/plone.recipe.zope2zeoserver.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.ATContentTypes]
 rules = %(here)s/rules/rules-Products.ATContentTypes.cfg
 svn-repo = collective
 svn-path = /Products.ATContentTypes
 git-url = git@github.com:plone/Products.ATContentTypes.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.CMFDiffTool]
 rules = %(here)s/rules/rules-Products.CMFDiffTool.cfg
 svn-repo = collective
 svn-path = /Products.CMFDiffTool
 git-url = git@github.com:plone/Products.CMFDiffTool.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.CMFDynamicViewFTI]
 rules = %(here)s/rules/rules-Products.CMFDynamicViewFTI.cfg
 svn-repo = collective
 svn-path = /CMFDynamicViewFTI
 git-url = git@github.com:plone/Products.CMFDynamicViewFTI.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.CMFEditions]
 rules = %(here)s/rules/rules-Products.CMFEditions.cfg
 svn-repo = collective
 svn-path = /Products.CMFEditions
 git-url = git@github.com:plone/Products.CMFEditions.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.CMFFormController]
 rules = %(here)s/rules/rules-Products.CMFFormController.cfg
 svn-repo = collective
 svn-path = /CMFFormController
 git-url = git@github.com:plone/Products.CMFFormController.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.CMFPlacefulWorkflow]
 rules = %(here)s/rules/rules-Products.CMFPlacefulWorkflow.cfg
 svn-repo = collective
 svn-path = /Products.CMFPlacefulWorkflow
 git-url = git@github.com:plone/Products.CMFPlacefulWorkflow.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.CMFQuickInstallerTool]
 rules = %(here)s/rules/rules-Products.CMFQuickInstallerTool.cfg
 svn-repo = collective
 svn-path = /CMFQuickInstallerTool
 git-url = git@github.com:plone/Products.CMFQuickInstallerTool.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.CMFTestCase]
 rules = %(here)s/rules/rules-Products.CMFTestCase.cfg
 svn-repo = collective
 svn-path = /Products.CMFTestCase
 git-url = git@github.com:plone/Products.CMFTestCase.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.contentmigration]
 rules = %(here)s/rules/rules-Products.contentmigration.cfg
 svn-repo = collective
 svn-path = /Products.contentmigration
 git-url = git@github.com:plone/Products.contentmigration.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.GroupUserFolder]
 rules = %(here)s/rules/rules-Products.GroupUserFolder.cfg
 svn-repo = collective
 svn-path = /Products.GroupUserFolder
 git-url = git@github.com:plone/Products.GroupUserFolder.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.i18ntestcase]
 rules = %(here)s/rules/rules-Products.i18ntestcase.cfg
 svn-repo = collective
 svn-path = /Products.i18ntestcase
 git-url = git@github.com:plone/Products.i18ntestcase.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.PasswordResetTool]
 rules = %(here)s/rules/rules-Products.PasswordResetTool.cfg
 svn-repo = collective
 svn-path = /Products.PasswordResetTool
 git-url = git@github.com:plone/Products.PasswordResetTool.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.PlacelessTranslationService]
 rules = %(here)s/rules/rules-Products.PlacelessTranslationService.cfg
 svn-repo = collective
 svn-path = /PlacelessTranslationService
 git-url = git@github.com:plone/Products.PlacelessTranslationService.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.PloneLanguageTool]
 rules = %(here)s/rules/rules-Products.PloneLanguageTool.cfg
 svn-repo = collective
 svn-path = /PloneLanguageTool
 git-url = git@github.com:plone/Products.PloneLanguageTool.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.PlonePAS]
 rules = %(here)s/rules/rules-Products.PlonePAS.cfg
 svn-repo = collective
 svn-path = /Products.PlonePAS
 git-url = git@github.com:plone/Products.PlonePAS.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.PloneTestCase]
 rules = %(here)s/rules/rules-Products.PloneTestCase.cfg
 svn-repo = collective
 svn-path = /Products.PloneTestCase
 git-url = git@github.com:plone/Products.PloneTestCase.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.SecureMailHost]
 rules = %(here)s/rules/rules-Products.SecureMailHost.cfg
 svn-repo = collective
 svn-path = /SecureMailHost
 git-url = git@github.com:plone/Products.SecureMailHost.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.statusmessages]
 rules = %(here)s/rules/rules-Products.statusmessages.cfg
 svn-repo = collective
 svn-path = /statusmessages
 git-url = git@github.com:plone/Products.statusmessages.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:Products.TinyMCE]
 rules = %(here)s/rules/rules-Products.TinyMCE.cfg
 svn-repo = collective
 svn-path = /Products.TinyMCE
 git-url = git@github.com:plone/Products.TinyMCE.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:txtfilter]
 rules = %(here)s/rules/rules-txtfilter.cfg
 svn-repo = collective
 svn-path = /txtfilter
 git-url = git@github.com:plone/txtfilter.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 [repo:wicked]
 rules = %(here)s/rules/rules-wicked.cfg
 svn-repo = collective
 svn-path = /wicked
 git-url = git@github.com:plone/wicked.git
-status = NEEDS RULES
+status = REVIEW-NEEDED
 
 
 #
 # PLONE
 #
+
+[repo:coredev]
+rules = %(here)s/rules/rules-coredev.cfg
+svn-repo = plone
+svn-path = /buildouts/plone-coredev
+git-url = git@github.com:plone/coredev.git
+status = NEEDS RULES
 
 [repo:Plone]
 rules = %(here)s/rules/rules-Plone.cfg
