--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,7 @@ command =
     cd ../..
 
 [versions]
-distribute = 0.6.15
+distribute = 0.6.21
 plone.recipe.command = 1.1
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
@@ -29,3 +29,4 @@ argh = 0.14.0
 github2 = 0.5.1
 python-dateutil = 1.5
 httplib2 = 0.7.1
+argparse = 1.2.1
